--- a/src/styles.css
+++ b/src/styles.css
@@ -39,7 +39,7 @@ body{
 #locationCon {
     grid-area: location;
     display:flex;
-    column-gap: 10px;
+    column-gap: 5px;
 }
 #icon {
     grid-area: iconImage;
@@ -75,7 +75,20 @@ body{
 }
 #inputForm{
     display: none;
+    justify-content: center;
+    margin-left: 5px;
 }
 #locationName{
     display: flex;
+    width: 100%;
+    justify-content: center;
+}
+#location{
+    width: 50%;
+    box-shadow: 2px 2px 2px rgb(164, 164, 253);
+}
+.inputButton{
+    margin-left: 10px;
+    padding: 2px;
+    box-shadow: 2px 2px 2px rgb(164, 164, 253);
 }
